// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// ==============================================================================

// The spec for the evaluator of individuals in this toy project.

edition = "2023";

package brain.evolution.graphs.joy;

import "evolution/projects/graphs/joy/dataset_spec.proto";

// Graph evaluation and fingerprint calculation will be in the dtype of the
// dataset's inputs.
message FingerprinterSpec {
  // Dataset to use for fingerprinting.
  DatasetSpec dataset = 1;  // Required.
}
